styles.css
/*RESET*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Poppins", sans-serif;
  background: #f8f5f0;
  color: #2c2c2c;
}

/*HEADER*/

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px 60px;
  position: fixed;
  width: 100%;
  background: rgba(248, 245, 240, 0.7);
  backdrop-filter: blur(12px);
  transition: all 0s ease;
  z-index: 1000;
}

/*EFECTO SCROLL APPLE*/

.header.scrolled {
  padding: 12px 60px;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.8);
}

.logo {
  display: flex;
  align-items: center;
  gap: 10px;
  font-weight: 600;
  font-size: 18px;
}

.logo img {
  width: 100px;
  height: 100px;
  object-fit: contain;
}

.logo span {
  font-family: "Playfair Display", serif;
  letter-spacing: 1px;
}

.nav {
  display: flex;
}

.menu-toggle {
  display: none;
  font-size: 24px;
  cursor: pointer;
}

.nav a {
  margin: 0 15px;
  text-decoration: none;
  color: #2c2c2c;
  font-weight: 400;
  transition: 0.3s;
}

.nav a:hover {
  color: #e67e22;
  color: white;
  padding: 10px 18px;
  border-radius: 30px;
  text-decoration: none;
  font-size: 14px;
  transition: 0.3s;
}

.cta:hover {
  background: #cf6d1c;
}

.whatsapp-btn {
  display: flex;
  align-items: center;
  gap: 8px;
  background: #25d366;
  color: #fff;
  padding: 10px 18px;
  border-radius: 30px;
  text-decoration: none;
  font-size: 14px;
  font-weight: 500;
  transition: all 0.3s ease;
}

.whatsapp-btn i {
  font-size: 16px;
  display: flex;
  align-items: center;
}

.whatsapp-btn:hover {
  background: #1ebe5d;
  transform: translateY(-2px);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
}

/*BOTON WHATSAPP FLOTANTE (MOBILE)*/

.whatsapp-float {
  position: fixed;
  bottom: 20px;
  right: 20px;
  background: #25d366;
  color: white;
  font-size: 22px;
  width: 55px;
  height: 55px;
  display: none;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  text-decoration: none;
  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
  z-index: 999;
  transition: all 0.3s ease;
}

.whatsapp-float i {
  font-size: 24px;
}

.whatsapp-float:hover {
  transform: scale(1.1);
  background: #1ebe5d;
}

/*HERO*/

.hero {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 180px 60px 80px;
}

.hero-text {
  max-width: 500px;
}

.hero-text h1 {
  font-family: "Playfair Display", serif;
  font-size: 48px;
  margin-bottom: 20px;
}

.hero text p {
  font-size: 16px;
  margin-bottom: 40px;
  color: #555;
}

.hero-buttons {
  margin-top: 10px;
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

.hero-buttons a {
  text-decoration: none;
  margin-right: 15px;
}

.btn-primary {
  background: #e67e22;
  color: white;
  padding: 14px 22px;
  border-radius: 30px;
  transition: 0.3s;
}

.btn-primary:hover {
  background: #cf6d1c;
}

.btn-secundary {
  border: 1px solid #e67e22;
  padding: 14px 22px;
  border-radius: 30px;
  color: #e67e22;
  transition: 0.3s;
}

.btn-secundary:hover {
  background: #e67e22;
  color: white;
}

/*IMAGE*/

.hero-image img {
  width: 400px;
  border-radius: 20px;
  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1);
}

/*BENEFICIOS*/

.beneficios {
  padding: 100px 60px;
  text-align: center;
}

.beneficios h2 {
  font-family: "Playfair Display", serif;
  font-size: 36px;
  margin-bottom: 60px;
}

/*GRID*/

.beneficios-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 30px;
}

/*CARDS*/

.card {
  background: white;
  padding: 30px;
  border-radius: 20px;
  text-align: left;
  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5);
  transition: all 0.3s ease;
  transform: translateY(30px);
  opacity: 0;
}

/*animación*/

.card.show {
  transform: translateY(0);
  opacity: 1;
}

/*HOVER PREMIUM*/

.card:hover {
  transform: translateY(-10px);
  box-shadow: 0 25px 60px rgba(0, 0, 0, 0.1);
}

.card h3 {
  margin-bottom: 10px;
  color: #e67e22;
}

/*PRODUCTOS*/

.productos {
  padding: 100px 60px;
  text-align: center;
}

.productos h2 {
  font-family: "Playfair Display", serif;
  font-size: 36px;
  margin-bottom: 60px;
}

/*GRID*/

.productos-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 40px;
}

/*CARD*/

.producto-card {
  background: #fff;
  border-radius: 20px;
  overflow: hidden;
  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.05);
  transition: all 0.3s ease;
  transform: translateY(30px);
  opacity: 0;
}

.producto-card.show {
  transform: translateY(0);
  opacity: 1;
}

.producto-card:hover {
  transform: translateY(-10px);
  box-shadow: 0 25px 60px rgba(0, 0, 0, 0.1);
}

/*IMAGEN*/

.producto-card img {
  width: 100%;
  height: 220px;
  object-fit: cover;
}

/*INFO*/

.producto-info {
  padding: 25px;
  text-align: left;
}

.producto-info h3 {
  margin-bottom: 10px;
  color: #e67e22;
}

.producto-info p {
  font-size: 14px;
  color: #555;
  margin-bottom: 20px;
}

/*BOTON*/

.btn-producto {
  display: inline-block;
  background: #25d366;
  color: white;
  padding: 10px 18px;
  border-radius: 25px;
  text-decoration: none;
  font-size: 14px;
  transition: 0.3s;
}

.btn-producto:hover {
  background: #1ebe5d;
}

.galeria {
  padding: 100px 60px;
  text-align: center;
}

.galeria h2 {
  font-family: "Playfair Display", serif;
  font-size: 36px;
  margin-bottom: 50px;
}

.galeria-grid {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 20px;
}

.galeria-grid img {
  width: 100%;
  height: 250px;
  object-fit: cover;
  border-radius: 15px;
  transition: 0.3s;
}

.galeria-grid img:hover {
  transform: scale(1.05);
}

/* LIGHTBOX */
.lightbox {
  display: none;
  position: fixed;
  z-index: 2000;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.9);
  justify-content: center;
  align-items: center;
}

.lightbox img {
  max-width: 90%;
  max-height: 80%;
  border-radius: 10px;
}

.lightbox .close {
  position: absolute;
  top: 30px;
  right: 40px;
  font-size: 40px;
  color: white;
  cursor: pointer;
}

/*TESTIMONIO*/

.testimonios {
  padding: 100px 60px;
  background: #f8f5f0;
  text-align: center;
}

.testimonios h2 {
  font-family: "Playfair Display", serif;
  margin-bottom: 40px;
}

.testimonios-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
  margin-bottom: 40px;
}

.testimonio {
  background: white;
  padding: 20px;
  border-radius: 15px;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
}

.testimonio strong {
  display: block;
  margin-bottom: 10px;
  color: #e67e22;
}

/*FORM*/

.form-testimonio {
  max-width: 500px;
  margin: auto;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.form-testimonio input,
.form-testimonio textarea {
  padding: 12px;
  border-radius: 10px;
  border: 1px solid #ddd;
}

.form-testimonio button {
  background: #e67e22;
  color: white;
  border: none;
  padding: 12px;
  border-radius: 25px;
  cursor: pointer;
}

.cta-final {
  padding: 100px 20px;
  text-align: center;
  background: #2c2c2c;
  color: white;
}

.cta-final h2 {
  font-family: "Playfair Display", serif;
  margin-bottom: 15px;
}

.cta-final p {
  margin-bottom: 30px;
  color: #ccc;
}

/* BOTON */
.cta-wsp {
  display: inline-flex;
  align-items: center;
  gap: 10px;
  background: #25d366;
  color: white;
  padding: 14px 25px;
  border-radius: 30px;
  text-decoration: none;
  font-size: 16px;
  transition: 0.3s;
}

.cta-wsp i {
  font-size: 20px;
}

.cta-wsp:hover {
  background: #1ebe5d;
  transform: scale(1.05);
}

/*FOOTER*/

.footer {
  background: #2c2c2c;
  color: white;
  padding: 60px 20px 20px;
}

.footer-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  align-items: center;
  max-width: 1200px;
  margin: auto;
  text-align: center;
}

/* LOGO */
.footer-logo img {
  width: 80px;
  margin-bottom: 10px;
}

.footer-logo h3 {
  margin: 0;
}

/* TEXTOS */
.footer h4 {
  margin-bottom: 10px;
}

.footer p {
  color: #ccc;
  font-size: 14px;
}

/* BOTTOM */
.footer-bottom {
  text-align: center;
  margin-top: 30px;
  border-top: 1px solid #444;
  padding-top: 15px;
  font-size: 13px;
}

/* responsive */
@media (max-width: 768px) {
  .footer-container {
    grid-template-columns: 1fr;
    text-align: center;
  }
}

/*MOBILE*/

@media (max-width: 768px) {
  .hero {
    flex-direction: column;
    text-align: center;
    padding: 140px 20px 60px;
  }

  .hero-text {
    max-width: 100%;
  }

  .hero-text h1 {
    font-size: 32px;
  }

  .hero-image {
    margin-top: 30px;
  }

  .hero-image img {
    width: 100%;
    max-width: 300px;
  }

  .hero-buttons {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 12px;
  }

  .hero-buttons a {
    width: 100%;
    max-width: 250px;
    text-align: center;
  }

  .nav {
    position: absolute;
    top: 70px;
    right: 0;
    background: white;
    flex-direction: column;
    width: 200px;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
    display: none;
  }

  .nav.active {
    display: flex;
  }

  .menu-toggle {
    display: block;
  }

  .cta {
    display: none;
  }

  .beneficios {
    padding: 60px 20px;
  }

  .beneficios-grid {
    grid-template-columns: 1fr;
  }

  /*ocultamos boton del header*/

  .whatsapp-btn {
    display: none;
  }

  /*mostramos boton flotante*/

  .whatsapp-float {
    display: flex;
  }

  .productos {
    padding: 60px 20px;
  }

  .productos-grid {
    grid-template-columns: 1fr;
  }

  .producto-info {
    text-align: center;
  }

  .galeria {
    padding: 60px 20px;
  }

  .galeria-grid {
    grid-template-columns: 1fr;
  }

  .testimonios {
    padding: 60px 20px;
  }

  .testimonios-container {
    grid-template-columns: 1fr;
  }

  .footer-container {
    grid-template-columns: 1fr;
    gap: 30px;
  }
}

@media (max-width: 1024px) {
  .productos-grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

/*ANIMACION SUAVE (OPCIONAL PERO PRO)*/

@keyframes float {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-5px);
  }
  100% {
    transform: translateY(0);
  }
}

.whatsapp-float {
  animation: float 2.5s ease-in-out infinite;
}

